# iterion

./: .dockerignore  .env.cloud.example  .gitattributes  .gitignore  .mcp.json  .npmrc  .release-it.json  .trivyignore  CLAUDE.md  Dockerfile  PRODUCTION_READINESS.md  README.md  SECURITY.md  SKILL-run-and-refine.md  SKILL.md  Taskfile.yml  devbox.json  docker-compose.cloud.yml  go.mod  go.sum  marketplace.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  wails.json
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.plans/: board-capabilities-next-steps.md  pilote-view-design.md  whats-next-live-2026-05-17.md
Cask/: iterion-desktop.rb
Formula/: iterion.rb
ast/: ast.go  ast_test.go  helpers.go
astjson/: astjson.go  astjson_test.go
benchmark/: benchmark_test.go  metrics.go  prometheus.go  prometheus_test.go  runner.go
bots/: bundle_consistency_test.go  catalog_typing_test.go  catalog_universality_test.go  embed.go
cli/: cli_test.go  diagram.go  editor.go  init.go  init_test.go  inspect.go  output.go  report.go  resume.go  run.go  tty.go  tty_linux.go  tty_windows.go  validate.go
cost/: cost.go  cost_test.go
delegate/: claude_code.go  codex.go  codex_output_discipline.txt  delegate.go  delegate_test.go  registry.go  truncate.go
docker/: minio-init.sh
docs/: README.md  architecture.md  asymptote-bench.md  attachments.md  baas-admin-guide.md  baas-overview.md  backends.md  bundles.md  (+74 more)
e2e/fixtures/renovacy-multi-stack/rust-app/: Cargo.toml
e2e/fixtures/renovacy-multi-stack/rust-app/src/: main.rs
(+2762 files in other folders)
